@startuml SkywalkerFramework

title SkywalkerFramework 当前架构（2026-03-03）

skinparam classAttributeIconSize 0
skinparam packageStyle rectangle
hide empty members

package "Core" {
	class SSFObject
	class SSFObjectManager
	class SSFModule
	class SSFPlugin
	class SSFPluginManager
}

class CSkywalkerFramework

SSFObject <|-- CSkywalkerFramework
SSFObject <|-- SSFObjectManager
SSFObject <|-- SSFModule
SSFObjectManager <|-- SSFPlugin
SSFObjectManager <|-- SSFPluginManager

CSkywalkerFramework o-- SSFPluginManager : 管理
SSFPluginManager *-- "1..*" SSFPlugin : 加载/卸载
SSFPlugin *-- "1..*" SSFModule : 注册模块

package "Plugin: Network" {
	class SSFPlugin_Network
	class SSFModule_NetworkServer
	class SSFModule_NetworkClient
}

package "Plugin: CommandLine" {
	class SSFPlugin_CommandLine
	class SSFModule_OS
}

SSFPlugin <|-- SSFPlugin_Network
SSFPlugin <|-- SSFPlugin_CommandLine
SSFPlugin <|-- SSFPlugin_Video

SSFModule <|-- SSFModule_NetworkServer
SSFModule <|-- SSFModule_NetworkClient
SSFModule <|-- SSFModule_OS

SSFPlugin_Network *-- SSFModule_NetworkServer
SSFPlugin_Network *-- SSFModule_NetworkClient
SSFPlugin_CommandLine *-- SSFModule_OS

legend right
  说明:
  - 实线: 继承/组合关系
endlegend

@enduml
